--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Farm RNG with Loot, N Project, and Gaussian Protocol Tokens" />
+    <meta name="description" content="Generate RNG with Loot, N Project, and Gaussian Protocol NFTs" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="pragma" content="no-cache" />
@@ -21,12 +21,12 @@
     <meta name="twitter:image" content="https://www.gaussianprotocol.io/gaussian_protocol_logo.png" />
     <meta
       name="twitter:description"
-      content="Farm $RNG with Gaussian Protocol NFT's"
+      content="Generate $RNG with Gaussian Protocol, Loot Project, &amp; The N Project NFT's"
     />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
-      content="GStaking - Generate $RNG Staking On The Gaussian Protocol"
+      content="RNG.is - Generate $RNG Staking On The Gaussian Protocol"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>RNG Staking | The Gaussian Protocol </title>
+    <title>RNG.is On The Gaussian Protocol </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
